--- a/index.html
+++ b/index.html
@@ -500,11 +500,11 @@
       
         <p><img src="/images/5.jpg"></p>
 <p>​       痛风是尿酸积累到一定程度的结果，是由于人体尿酸代谢机能出现紊乱，尿酸代谢量远少于摄入量，导致尿酸在血液、体液、关节中沉积。达到一定浓度后形成结晶，产生刺痛感，时间长了以后逐步形成大的结晶块，形成痛风石。</p>
-<p>​      有一部分病友在服用我们痛风丸几个疗程之后，尿酸水平就完全降下来了，这是有的（参考中山案例）。</p>
-<p>​        但有很多病友在服用「痛风丸」后，痛风不疼了，但到医院检查确发现尿酸并没有降低，或还有少许升高。这样的情况也是有的，对于这样的情况大家不用焦虑，这是正常的情况。</p>
+<p>​      有一部分病友在服用我们「痛风丸」几个疗程之后，尿酸水平就完全降下来了，这是有的（参考中山案例）。</p>
+<p>​        但有很多病友在服用「痛风丸」后，痛风不疼了，但到医院检查确发现尿酸并没有降低，或还有少许升高。这样的情况也是有的，对于这样的情况大家也不用焦虑，这是正常的情况。</p>
 <p>​        我们的「痛风丸」在中和部分尿酸的同时会让部分尿酸结晶溶解，缓解疼痛。虽然，身体里总体的尿酸量减少了，但由于局部尿酸浓度的降低又会导致尿酸结晶的溶解，所以从尿酸指标上是短期很难看到下降的。想要尿酸指标降下来，只有等到服完药一段时间，身体机能逐步恢复，结晶都完全溶解，尿酸水平才有可能完全降下来。</p>
 <p>​       但是，通常情况下，由于我们「痛风丸」药力的作用，人体机能逐步恢复，新的尿酸结晶不再形成，所以短期内不会再次发作。</p>
-<p><strong>【总结】**</strong>快速降尿酸是有可能的，但是取决于患者身体的尿酸积累程度。**轻度的患者是有可能的。中度和重度患者会比较困难，需要的疗程周期要多一些，时间会长一些。</p>
+<p><strong>【总结】快速降尿酸是有可能的，但是取决于患者身体的尿酸积累程度。</strong>轻度的患者是有可能的。中度和重度患者会比较困难，需要的疗程周期要多一些，时间会长一些。</p>
 <p><img src="/images/3.png"></p>
 
       
